(library
 (name time_ns_unix)
 (public_name core_unix.time_ns_unix)
 (libraries core core_unix ppx_diff.diffable sexplib
   ppx_stable_witness.stable_witness)
 (preprocess
  (pps ppx_jane ppx_optcomp))
 (preprocessor_deps core_unix_config.h))

(rule
 (targets core_unix_config.h)
 (deps)
 (action
  (bash "cp %{lib:core_unix:core_unix_config.h} .")))
